views/stylesheets/_application.scss
/* ... */
/* @end */

/* @group work */

.page-work {

  .row:first-child {
    margin-top: $baseline*2;
    margin-bottom: $baseline*2;

    h1{
      text-transform: lowercase;
    }

    h2{
      line-height: 1.2;
      font-size: 1.5em;
      -webkit-font-smoothing: antialiased;
    }

    .columns6 {
      margin-left: 0;
    }
  }

  .case-study {

    hr {
      margin-bottom: $baseline*2;
    }
    .row {
      margin-bottom: $baseline*3;
      
      .frame {
        margin-bottom: $baseline;

        .img {
          height: $baseline*6;
          padding-top: $baseline*2;
          h2 {
            width: 100%;
            text-align: center;
            color: white;
          }
          &.gaming {
            background-image: url("/images/gaming_tile.png");
          }
          &.finace {
            background-image: url("/images/finance_tile.png");
          }
          &.clarity {
            background-image: url("/images/clarity_tile.png");
          }
        }
      }
      .columns3:nth-child(2) {
        margin-left: 0;
      }
    }
  }

  .work-contact {
    margin-top: $baseline*2;
  }
}
/* @end */

/* @group products */

.page-products{

  .row:first-child{
    margin-top: $baseline*2;
    margin-bottom: $baseline;

    .columns6{
      margin-left: 0;

      h1{
        text-transform: lowercase;
      }

      h2{
        margin-top: $baseline;
        font-size: 1.5em;
        -webkit-font-smoothing: antialiased;
        line-height: 1.2;
      }
    }
  }

  .row:nth-child(2){
    margin-bottom: $baseline*2;
  }

  .tricklr, .vistazo{
    .img{
      width: 100%;
      height: $baseline*9;
      background-color: $pink;
      background-image: url("/images/tricklr.jpg");
      background-position-x: 50%;
    }
    a{
      color: $pink;
    }
  }

  .vistazo{
    .img{
      background-color: $blue;
      background-image: url("/images/vistazo.jpg");
    }
    a{
      color: $blue;
    }
  }

  h2{
    margin-top: $baseline*2;
    margin-bottom: $baseline;
  }

  hr{
    margin-bottom: $baseline*2;
  }

  .open-source{
    .columns6 {
      margin-left: 0;
    }
    p{
      margin-top: $baseline;
      margin-bottom: 0;
    }
  }
}

/* @end */

/* @group people */

.page-people{
  .headline {
    margin-top: $baseline*2;
    margin-bottom: $baseline;

    h1{
      text-transform: lowercase;
    }
  }
  .people-copy{
    margin-bottom: 0; // Spacing in h1, instead of here (for # linking)
  }
  #spotlight{
    .row:first-child{
      margin-bottom: $baseline;
    }
    .row:nth-child(3){
      margin-bottom: $baseline;
    }
    .person-row{
      display: none;
      &.active{
        display: block;
      }
    }
    hr{
      margin-bottom: $baseline;
    }

    .frame { // Left float
      width: 290px;
      float: left;
      margin-left: -100%;

      &.top {
        display: none; // Showing bottom image
      }
      .img{
        height: $baseline*12;
        text-align: center;
      }
    }

    article { // Right float
      width: 100%;
      float: left;
      margin-left: 0;
      .inner-wrapper {
        margin-left: 320px;
      }
    }

    h1 {
      margin-top: $baseline*2;
    }
    h3{
      margin-bottom: $baseline;
    }
    .link{
      margin-bottom: 0;
    }
  }

  .employees{
    .row:first-child,
    .row:nth-child(3){
      margin-bottom: $baseline;
    }
    hr{
      margin-bottom: $baseline;
    }

    .person,
    .join_us{
      display: block;
      margin-bottom: $baseline;
      min-height: 205px;
      min-width: 145px;
      width: 45%;
      margin-left: 0;
      margin-right: 5%;

      .size0{
        line-height: 16px;
      }

      &:hover{
        text-decoration: none;
      }

      .img{
        width: 100%;
        height: $baseline*5;
        margin-bottom: 7px;
        text-align: center;
      }
      p{
        margin-bottom: -5px;
      }
    }

    li:nth-child(2n){
      .person,
      .join_us{
        margin-left: 5%;
        margin-right: 0;
      }
    }
  }

  .plus{
    color: hsla(0,0,100,.75);
    font-size: 10em;
    line-height: .45;
  }

  .pebble-it{
    padding: $baseline*2 0 $baseline;
    .row{
      margin-bottom: $baseline;
    }
    h1,a{
      color: #009be8;
    }
  }
}
/* ... */

